# ficdata

./: .env  .gitignore  Cargo.toml  README.md  compose.yml
.github/: dependabot.yml
migrations/2026-02-28-015620-0000_create_fics/: down.sql  up.sql
migrations/2026-02-28-025947-0000_create_tags/: up.sql
migrations/2026-02-28-031646-0000_create_fics_tags/: down.sql  up.sql
src/: errors.rs  extraction.rs  lib.rs  metadata.rs  models.rs  persistence.rs  schema.rs
