[package]
name = "ficdata"
edition = "2024"
authors = ["Danielosw"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/danielosw/ficdata"
description = "Data structures and metadata handling for AO3 fanfiction"
readme = "README.md"
keywords = ["ao3", "fanfiction", "metadata"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
scraper = "0.*"
regex = "1.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
rayon = "1.11.0"
parking_lot = "0.12.5"
bzip2 = { version = "0.6.1", features = ["bzip2-sys"] }
thiserror = "2.0.18"
diesel = { version = "2.2.0", features = ["postgres"] }

dotenvy = "0.15"
[lints.rust]
non_snake_case = { level = "allow" }

[profile.release]
debug = true
lto = true
codegen-units = 1
opt-level = 2

[profile.dev]
panic = "unwind"
opt-level = 1
lto = "off"
